Specify resources to add for building project

--- a/repairnator/repairnator-scanner/pom.xml
+++ b/repairnator/repairnator-scanner/pom.xml
@@ -23,6 +23,13 @@
     </properties>
 
     <build>
+        <resources>
+            <!-- Filter resource files -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
