--- a/repairnator/repairnator-pipeline/pom.xml
+++ b/repairnator/repairnator-pipeline/pom.xml
@@ -11,9 +11,14 @@
 
     <repositories>
         <repository>
-            <id>apache-snapshots</id>
-            <name>apache-snapshots</name>
-            <url>https://repository.apache.org/content/groups/snapshots/</url>
+            <id>tdurieux-maven-repository-snapshot</id>
+            <name>tdurieux.github.io maven-repository</name>
+            <url>https://tdurieux.github.io/maven-repository/snapshots/</url>
+        </repository>
+        <repository>
+            <id>tdurieux-maven-repository-release</id>
+            <name>tdurieux.github.io maven-repository</name>
+            <url>https://tdurieux.github.io/maven-repository/releases/</url>
         </repository>
     </repositories>
 
@@ -21,7 +26,7 @@
         <dependency>
             <groupId>fr.inria.repairnator</groupId>
             <artifactId>repairnator-core</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jgit</groupId>
