--- a/repairnator/docker-images/pipeline-dockerimage/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage/Dockerfile
@@ -31,6 +31,7 @@ ENV OUTPUT=
 ENV PUSH_URL=
 ENV SMTP_SERVER=
 ENV NOTIFY_TO=
+ENV REPAIR_TOOLS=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
