--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -17,8 +17,8 @@
 
     <licenses>
         <license>
-            <name>AGPL-3.0</name>
-            <url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
+            <name>MIT</name>
+            <url>https://github.com/Spirals-Team/repairnator/blob/master/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
