--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ dockerImage/.credentials
 dockerImage/client_secret.json
 dockerImage/repairnator-pipeline.jar
 repairnator/docker-images/pipeline-dockerimage/version.ini
+repairnator/repairnator-pipeline/output_astor
