--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>fr.inria.jtravis</groupId>
             <artifactId>jtravis</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.martiansoftware</groupId>
