--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>fr.inria.repairnator</groupId>
     <artifactId>repairnator-root</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.1</version>
     <packaging>pom</packaging>
     <name>repairnator-root</name>
     <inceptionYear>2017</inceptionYear>
@@ -52,7 +52,7 @@
         <url>https://github.com/Spirals-Team/repairnator</url>
         <connection>scm:git:git://github.com:Spirals-Team/repairnator.git</connection>
         <developerConnection>scm:git:git@github.com:Spirals-Team/repairnator.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>repairnator-root-2.1</tag>
     </scm>
 
     <distributionManagement>
