--- a/repairnator/repairnator-pipeline/pom.xml
+++ b/repairnator/repairnator-pipeline/pom.xml
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>org.inria.sacha.automaticRepair</groupId>
             <artifactId>astor</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>072027c4611b41b0ff2c486bfb6d9be8814ea745</version>
         </dependency>
         <dependency>
             <groupId>eu.stamp-project</groupId>
