--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -14,7 +14,7 @@ SMTP_SERVER= # Smtp server to notify by email
 NOTIFY_TO= # email adresses separated by comma (used for notifier, you must have specify an smtp server)
 NOTIFY_ENDPROCESS=0 # If set to 1, the end of dockerpool and scanner will send a notification using smtp and notify_to information
 RUN_ID_SUFFIX= # A suffix to add to the run id (useful to retrieve a specific run in serialized data).
-REPAIR_TOOLS=Nopol,Astor,NPEFix # The available repair tools to use. Possible values (comma separated): Astor, Nopol, NPEFix, AssertFixer
+REPAIR_TOOLS=Nopol,AstorJMut,NPEFix # The available repair tools to use. Possible values (comma separated): Astor, Nopol, NPEFix, AssertFixer, AstorJMut, AstorJKali, AstorJGenProg
 
 #### Scanner configuration
 
