--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -2,7 +2,7 @@
 
 # Mandatory elements for all components of Repairnator
 
-GITHUB_OAUTH=XXXX # Github personal token (https://github.com/settings/tokens)
+export GITHUB_OAUTH=XXXX # Github personal token (https://github.com/settings/tokens)
 HOME_REPAIR=$HOME/repairnator # The home directory for the following pathes
 
 # Optional configuration for all components of Repairnator
