Update pipeline version for Bears

--- a/repairnator/docker-images/bears-dockerimage/Dockerfile
+++ b/repairnator/docker-images/bears-dockerimage/Dockerfile
@@ -9,6 +9,7 @@ COPY logback.xml /root/
 COPY configure_git.sh /root/
 COPY build_repairnator4Bears.sh /root/
 COPY pipeline_launcher4Bears.sh /root/
+COPY version.ini /root/
 
 RUN chmod +x /root/*.sh
 RUN echo "Europe/Paris" > /etc/timezone 
