--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -52,6 +52,7 @@ SCANNER_VERSION=LATEST
 DOCKERPOOL_VERSION=LATEST
 REALTIME_VERSION=LATEST
 PIPELINE_VERSION=latest
+CHECKBRANCHES_VERSION=LATEST
 
 ### Docker tags
 DOCKER_TAG=surli/repairnator:$PIPELINE_VERSION # Tag of the docker image to use for pipeline
