Fix pipeline docker logger level

--- a/repairnator/docker-images/bears-dockerimage/Dockerfile
+++ b/repairnator/docker-images/bears-dockerimage/Dockerfile
@@ -24,6 +24,7 @@ ENV REPAIR_MODE=
 ENV BUILD_ID=
 ENV NEXT_BUILD_ID=
 ENV LOG_FILENAME=
+ENV LOG_LEVEL=
 ENV RUN_ID=
 ENV MONGODB_HOST=
 ENV MONGODB_NAME=
