--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -56,6 +56,7 @@ CHECKBRANCHES_VERSION=LATEST
 
 ### Docker tags
 DOCKER_TAG=surli/repairnator:$PIPELINE_VERSION # Tag of the docker image to use for pipeline
+DOCKER_TAG_BEARS=fermadeiral/repairnator:$PIPELINE_VERSION # Tag of the docker image to use for pipeline when running on Bears mode
 DOCKER_CHECKBRANCHES_TAG=surli/checkbranches:latest # Tag of the docker image to use for checkbranches
 
 ### Root pathes
