moved JAVA_OPTS to end of file

--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -15,7 +15,6 @@ NOTIFY_TO= # email adresses separated by comma (used for notifier, you must have
 NOTIFY_ENDPROCESS=0 # If set to 1, the end of dockerpool and scanner will send a notification using smtp and notify_to information
 RUN_ID_SUFFIX= # A suffix to add to the run id (useful to retrieve a specific run in serialized data).
 REPAIR_TOOLS=Nopol,AstorJMut,NPEFix # The available repair tools to use. Possible values (comma separated): Astor, Nopol, NPEFix, AssertFixer, AstorJMut, AstorJKali, AstorJGenProg
-JAVA_OPTS= # optional arguments for java such as Xmx
 
 #### Scanner configuration
 
@@ -88,3 +87,5 @@ BEARS_DELIMITER=1 # When set to 1, the scanner writes different files for the di
 SKIP_LAUNCH_REPAIRNATOR=0 # If set to 1, skip the launch of docker pool: it will only launch the scanner. Note that this option might be overriden in some scripts.
 CREATE_OUTPUT_DIR=0 # Use specifically for grid5000: allow to create a subdirectory to contain logs/serialization of docker containers
 
+### Optional java arguments
+JAVA_OPTS= # optional arguments for java such as Xmx
