New argument JAVA_OPTS added to scripts (#623)
* added JAVA_OPTS to all scripts and in repairnator.cfg

* moved JAVA_OPTS to end of file

--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -87,3 +87,5 @@ BEARS_DELIMITER=1 # When set to 1, the scanner writes different files for the di
 SKIP_LAUNCH_REPAIRNATOR=0 # If set to 1, skip the launch of docker pool: it will only launch the scanner. Note that this option might be overriden in some scripts.
 CREATE_OUTPUT_DIR=0 # Use specifically for grid5000: allow to create a subdirectory to contain logs/serialization of docker containers
 
+### Optional java arguments
+JAVA_OPTS= # optional arguments for java such as Xmx
