added SKIP_DELETE to repairnator global config

--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -27,6 +27,7 @@ SCANNER_NB_HOURS=1 # Number of hours to inspect to get last builds (e.g. 4 will 
 
 NB_THREADS=4 # Number of concurrent docker container to run
 DAY_TIMEOUT=1 # Global timeout to stop the docker execution
+SKIP_DELETE=1 # Skip the deletion of docker containers
 
 #### Realtime scanner configuration
 
