--- a/repairnator/docker-images/pipeline-dockerimage/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage/Dockerfile
@@ -32,6 +32,7 @@ ENV PUSH_URL=
 ENV SMTP_SERVER=
 ENV NOTIFY_TO=
 ENV REPAIR_TOOLS=
+ENV SKIP_DELETE=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
