--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -27,7 +27,6 @@ SCANNER_NB_HOURS=1 # Number of hours to inspect to get last builds (e.g. 4 will 
 
 NB_THREADS=4 # Number of concurrent docker container to run
 DAY_TIMEOUT=1 # Global timeout to stop the docker execution
-SKIP_DELETE=1 # Skip the deletion of docker containers
 
 #### Realtime scanner configuration
 
@@ -87,6 +86,7 @@ BEARS_FIXER_MODE=both # Possible values are both, failing_passing, passing_passi
 BEARS_DELIMITER=1 # When set to 1, the scanner writes different files for the different kind of statuses.
 SKIP_LAUNCH_REPAIRNATOR=0 # If set to 1, skip the launch of docker pool: it will only launch the scanner. Note that this option might be overriden in some scripts.
 CREATE_OUTPUT_DIR=0 # Use specifically for grid5000: allow to create a subdirectory to contain logs/serialization of docker containers
+SKIP_DELETE=0 # Set to 1 to skip the deletion of docker containers
 
 ### Optional java arguments
 JAVA_OPTS= # optional arguments for java such as Xmx
