review Skip delete option (#642)
* added skipDelete option to repirnator/repairnator/scripts

* added SKIP_DELETE to repairnator global config

* added skipDelete to docker-images, specifically pipeline-dockerimage as well as repair_buggy_build.sh

* added switch skipDelete to launcher

* changed so that launcher uses predefined switch from launcherutils

* added skipDelete argument to docker-pool launcher

* added jsap argument skipDelete to Launchers

* accidentally added some duplicates

* changed -d flag in repair_buggy_build to react to SKIP_DELETE

* changed accidental elementaryArgs to args in check_branches.se and launch_rtscanner.sh

* corrected boolean in repair_buggy_build.sh

* changed so that scanner launcher does not use skipDelete option

* removed SKIP_DELETE from launch_scanner.sh

* reverted changes to repair_buggy_build.sh so that program may run again

* proper revert

* fixed DOCKER_ARGS in repair_buggy_build.sh

* removed conditional from '-d' option in repair_buggy_build.sh

* removed skipDelete option from pipeline

* removed skipDelete arguments from docker-images/pipeline-dockerimage

* removed SKIP_DELETE environment variable in repair_buggy_build.sh and moved option in repairnator.cfg

--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -86,6 +86,7 @@ BEARS_FIXER_MODE=both # Possible values are both, failing_passing, passing_passi
 BEARS_DELIMITER=1 # When set to 1, the scanner writes different files for the different kind of statuses.
 SKIP_LAUNCH_REPAIRNATOR=0 # If set to 1, skip the launch of docker pool: it will only launch the scanner. Note that this option might be overriden in some scripts.
 CREATE_OUTPUT_DIR=0 # Use specifically for grid5000: allow to create a subdirectory to contain logs/serialization of docker containers
+SKIP_DELETE=0 # Set to 1 to skip the deletion of docker containers
 
 ### Optional java arguments
 JAVA_OPTS= # optional arguments for java such as Xmx
