--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ repairnator/docker-images/pipeline-dockerimage/version.ini
 repairnator/repairnator-pipeline/spooned*
 repairnator/repairnator-pipeline/output_astor
 /bin/
+*.java-version
