Remove references of Luc Esape from the code

--- a/repairnator/docker-images/pipeline-dockerimage/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage/Dockerfile
@@ -32,6 +32,8 @@ ENV PUSH_URL=
 ENV SMTP_SERVER=
 ENV NOTIFY_TO=
 ENV REPAIR_TOOLS=
+ENV GITHUB_USERNAME=
+ENV GITHUB_USEREMAIL=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
