--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -7,6 +7,8 @@ HOME_REPAIR=$HOME/repairnator # The home directory for the following pathes
 
 # Optional configuration for all components of Repairnator
 
+GITHUB_USERNAME=repairnator # Name which will be used for committing
+GITHUB_USEREMAIL=noreply@github.com # Email will be used for committing
 MONGODB_HOST= # Mongo host to put data, should follow the following format: mongodb://user:password@domain:port
 MONGODB_NAME= # Mongo database name to use
 PUSH_URL= # Github repository URL to put data (data are pushed in branches), on the format: https://github.com/user/repo
