Add checkbranches docker image for Bears (#688)
* Add docker file and entrypoint script

* Add docker tag for Bears: add DOCKER_CHECKBRANCHES_TAG_BEARS in config and use it in scripts/check_branches.sh

* Add bears mode arg into checkbranches module and use it

--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -60,6 +60,7 @@ CHECKBRANCHES_VERSION=LATEST
 DOCKER_TAG=spirals/repairnator:$PIPELINE_VERSION # Tag of the docker image to use for pipeline
 DOCKER_TAG_BEARS=spirals/bears:$PIPELINE_VERSION # Tag of the docker image to use for pipeline when running on Bears mode
 DOCKER_CHECKBRANCHES_TAG=surli/checkbranches:latest # Tag of the docker image to use for checkbranches
+DOCKER_CHECKBRANCHES_TAG_BEARS=fermadeiral/checkbranches:latest # Tag of the docker image to use for checkbranches when running on Bears mode
 
 ### Root pathes
 
