Start with changes on the docker-images dir

--- a/repairnator/docker-images/checkbranches-dockerimage/Dockerfile
+++ b/repairnator/docker-images/checkbranches-dockerimage/Dockerfile
@@ -3,6 +3,7 @@ FROM maven:3.3.9-jdk-8
 LABEL Description="Repairnator checkbranch docker image" Vendor="Spirals" Version="0.0.0"
 
 COPY check_branches.sh /root/
+COPY repairnator-schema.json /root/
 
 RUN echo "Europe/Paris" > /etc/timezone && chmod +x /root/*.sh
 
