Change docker files for installing the tool used to validate a json file against a schema

--- a/repairnator/docker-images/checkbranches-dockerimage/Dockerfile
+++ b/repairnator/docker-images/checkbranches-dockerimage/Dockerfile
@@ -6,6 +6,11 @@ COPY check_branches.sh /root/
 COPY repairnator-schema.json /root/
 
 RUN echo "Europe/Paris" > /etc/timezone && chmod +x /root/*.sh
+RUN apt-get update
+RUN apt-get install curl -y
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
+RUN apt-get install nodejs
+RUN npm install -g ajv-cli
 
 ENV M2_HOME=$MAVEN_HOME
 
