--- a/repairnator/docker-images/bears-dockerimage/Dockerfile
+++ b/repairnator/docker-images/bears-dockerimage/Dockerfile
@@ -32,6 +32,8 @@ ENV OUTPUT=
 ENV PUSH_URL=
 ENV SMTP_SERVER=
 ENV NOTIFY_TO=
+ENV GITHUB_USERNAME=
+ENV GITHUB_USEREMAIL=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher4Bears.sh
