--- a/repairnator/repairnator-core/pom.xml
+++ b/repairnator/repairnator-core/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>javax.mail</artifactId>
             <version>1.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.spotify</groupId>
+            <artifactId>docker-client</artifactId>
+            <version>8.11.1</version>
+        </dependency>
     </dependencies>
 </project>
