--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ matrix:
   - language: bash
 
     before_script:
+        - sudo apt-get update
+        - sudo apt-get install nodejs npm
+        - sudo npm install -g ajv-cli
         - sudo apt-get install shunit2
 
     script:
