--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ matrix:
 
     before_script:
         - sudo apt-get update
-        - sudo apt-get install nodejs npm
+        - curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+        - sudo apt-get install -y nodejs
         - sudo npm install -g ajv-cli
         - sudo apt-get install shunit2
 
