--- a/repairnator/docker-images/pipeline-dockerimage-dev/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage-dev/Dockerfile
@@ -34,6 +34,7 @@ ENV NOTIFY_TO=
 ENV REPAIR_TOOLS=
 ENV GITHUB_USERNAME=
 ENV GITHUB_USEREMAIL=
+ENV CREATE_PR=0
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
