Add tests for check_branches.sh (the two scripts that run in the docker for checking branches). (#697)
* Add tests

* Add README.md

* Try to run tests in Travis

* Try again only with the file that all tests are passing locally to see if the build passes

* Add echo

* Try to fix the running of the tests in Travis: thanks echo, now I see the problem

* Try again

* Try to fix another issue

* Do final changes (the build is supposed to fail, but now it's because we have test failures)

* Update the two README.md

* Update checkbranches-dockerimage/repairnator-schema.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,15 @@ jdk: openjdk8
 services:
  - docker
 
-script: "./.travis/travis-run.sh"
+before_script:
+  - sudo apt-get update
+  - curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+  - sudo apt-get install -y nodejs
+  - sudo npm install -g ajv-cli
+  - sudo apt-get install shunit2
+
+script:
+  - "./.travis/travis-run.sh"
 
 after_success:
   - "./.travis/travis-deploy.sh"
