--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 
 before_script:
   - sudo apt-get update
+  - sudo apt-get install cloc -y
   - curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
   - sudo apt-get install -y nodejs
   - sudo npm install -g ajv-cli
