--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -18,7 +18,7 @@ NOTIFY_ENDPROCESS=0 # If set to 1, the end of dockerpool and scanner will send a
 RUN_ID_SUFFIX= # A suffix to add to the run id (useful to retrieve a specific run in serialized data).
 REPAIR_TOOLS=NopolAllTests,AstorJMut,NPEFix # The available repair tools to use. Possible values (comma separated): NPEFix, AssertFixer, AstorJMut, AstorJKali, AstorJGenProg, NopolAllTests, NopolSingleTest, NopolTestExclusionStrategy
 
-CREATE_PR=0 // set to 1 to create pull requests automatically when a patch is found
+CREATE_PR=0 # set to 1 to create pull requests automatically when a patch is found
 
 #### Scanner configuration
 
