--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -13,8 +13,10 @@ MONGODB_HOST= # Mongo host to put data, should follow the following format: mong
 MONGODB_NAME= # Mongo database name to use
 PUSH_URL= # Github repository URL to put data (data are pushed in branches), on the format: https://github.com/user/repo
 SMTP_SERVER= # Smtp server to notify by email
+SMTP_PORT= # Port for the SMTP server, by default port 25
+SMTP_TLS=0 # If set to 1, enable STARTTLS
 SMTP_USERNAME= #Username for authorized server
-SMTP_PASSWORD= #Password for authorized server
+SMTP_PASSWORD= #Password for authorized server, if not left empty also enables auth
 NOTIFY_TO= # email adresses separated by comma (used for notifier, you must have specify an smtp server)
 NOTIFY_ENDPROCESS=0 # If set to 1, the end of dockerpool and scanner will send a notification using smtp and notify_to information
 RUN_ID_SUFFIX= # A suffix to add to the run id (useful to retrieve a specific run in serialized data).
