--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.2</version>
         </dependency>
+	<dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+  	    <version>2.3.0</version>
+	</dependency> 	
         <dependency>
             <groupId>fr.inria.jtravis</groupId>
             <artifactId>jtravis</artifactId>
