--- a/website/repairnator-mongo-rest-api/docker-compose.yml
+++ b/website/repairnator-mongo-rest-api/docker-compose.yml
@@ -24,7 +24,7 @@ services:
 
     # Overwrite any env var defined in .env file (if required)
     environment:
-      # - MONGO_HOST=mongodb://mongo/express-mongoose-es6-rest-api-development
+      # - MONGO_HOST=mongodb://mongo:27017/test
       - DEBUG=express-mongoose-es6-rest-api:*
 
     # Link to containers in another service.
@@ -35,4 +35,4 @@ services:
   mongo:
     image: "mongo:3.4.2"
     ports:
-      - "27027:27027"
+      - "27027:27017"
