--- a/website/repairnator-mongo-rest-api/package.json
+++ b/website/repairnator-mongo-rest-api/package.json
@@ -56,7 +56,7 @@
     "http-status": "^0.2.0",
     "joi": "10.0.6",
     "jsonwebtoken": "7.1.9",
-    "lodash": "false4.17.11",
+    "lodash": "^4.17.10",
     "method-override": "^2.3.5",
     "moment": "^2.18.1",
     "mongoose": "5.3.4",
