--- a/website/repairnator-site/package.json
+++ b/website/repairnator-site/package.json
@@ -8,6 +8,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.5.2",
     "browser-sync": "^2.2.1",
+    "config": "^2.0.1",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
@@ -15,6 +16,7 @@
     "gulp-cache": "^0.4.2",
     "gulp-cssnano": "^2.0.0",
     "gulp-eslint": "^3.0.0",
+    "gulp-file": "^0.4.0",
     "gulp-filter": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
