added environment vairables to docker-file and some properties to emailnotifierengine

--- a/repairnator/docker-images/pipeline-dockerimage-dev/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage-dev/Dockerfile
@@ -30,6 +30,10 @@ ENV MONGODB_NAME=
 ENV OUTPUT=
 ENV PUSH_URL=
 ENV SMTP_SERVER=
+ENV SMTP_PORT=
+ENV SMTP_USERNAME=
+ENV SMTP_PASSWORD=
+ENV SMTP_TLS=
 ENV NOTIFY_TO=
 ENV REPAIR_TOOLS=
 ENV GITHUB_USERNAME=
