--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -44,6 +44,9 @@ DURATION=PT10m # Duration execution of the process on the ISO-8601 duration form
 JOB_SLEEP_TIME=10 # Sleep time in seconds for requesting /job endpoint in Travis
 BUILD_SLEEP_TIME=10 # Sleep time in seconds for refreshing builds status
 LIMIT_INSPECTED_BUILDS=100 # Maximum number of builds under inspection
+NOTIFY_SUMMARY= # Email adresses separated by comma (used for summary emails, need server specified above)
+SUMMARY_FREQUENCY= # Duration between summaries on the ISO-8601 duration format: PWdTXhYmZs (e.g. PT1h for 1 hour)
+
 
 #### Checkbranch configuration
 
