Adds travis run script for maven-repair and removes old settings
* Adds travis-maven-repair.sh

* Modifies travis.yml to run maven-repair and repairnator as separate builds by matrix

* removes old maven-repair travis settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ before_script:
   - sudo apt-get install shunit2
 
 script:
+  matrix:
   - "./.travis/travis-run.sh"
+  - "./.travis/travis-maven-repair.sh"
 
 after_success:
   - "./.travis/travis-deploy.sh"
