--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,6 @@ jdk: openjdk8
 services:
  - docker
 
-env:
-  matrix:
-  - SCRIPT="travis-repairnator.sh"
-  - SCRIPT="travis-maven-repair.sh"
-
-
 before_script:
   - sudo apt-get update
   - sudo apt-get install cloc -y
@@ -21,7 +15,8 @@ before_script:
   - sudo npm install -g ajv-cli
   - sudo apt-get install shunit2
 
-script: ./.travis/$SCRIPT
+script:
+  - "./.travis/travis-run.sh"
 
 after_success:
   - "./.travis/travis-deploy.sh"
