--- a/.travis.yml
+++ b/.travis.yml
@@ -13,18 +13,16 @@ env:
   - SCRIPT="travis-maven-repair.sh"
 
 
-before_script:
-  - sudo apt-get update
-  - sudo apt-get install cloc -y
-  - curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
-  - sudo apt-get install -y nodejs
-  - sudo npm install -g ajv-cli
-  - sudo apt-get install shunit2
+jobs:
+  include:
+    - stage: before
+      script: "bash ./.travis/travis-before.sh"
 
-script: ./.travis/$SCRIPT
+    - stage: test
+      script: ./.travis/$SCRIPT
 
-after_success:
-  - "./.travis/travis-deploy.sh"
+    - stage: deploy
+      script: ./.travis/travis-deploy.sh
 
 branches:
   only:
