Deploy travis in stages to enable auto-deployment of docker-image (#809)
* WIP to make travis work with stages

* Makes changes to the build configuration of travis

* added travis-maven-repair file

* Added matrix to .travis.yml

* Attempt to circumvent the fact that matrix does not work with stages

* Update travis-deploy.sh

* Typo

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+
 language: java
 
 sudo: true
@@ -7,19 +8,22 @@ jdk: openjdk8
 services:
  - docker
 
-before_script:
-  - sudo apt-get update
-  - sudo apt-get install cloc -y
-  - curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
-  - sudo apt-get install -y nodejs
-  - sudo npm install -g ajv-cli
-  - sudo apt-get install shunit2
 
-script:
-  - "./.travis/travis-run.sh"
+install: ./.travis/travis-before.sh
 
-after_success:
-  - "./.travis/travis-deploy.sh"
+jobs:
+  include:
+    - stage: prepare cache
+      script: ./.travis/travis-before.sh
+      
+    - stage: test
+      script: ./.travis/travis-maven-repair.sh
+
+    - stage: test
+      script: ./.travis/travis-run.sh
+
+    - stage: deploy
+      script: ./.travis/travis-deploy.sh
 
 branches:
   only:
