chore: update pom.xml for deployment

--- a/maven-repair/.gitignore
+++ b/maven-repair/.gitignore
@@ -1,6 +1,4 @@
 
-# Created by https://www.gitignore.io/api/maven
-
 ### Maven ###
 target/
 pom.xml.tag
@@ -11,6 +9,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+src/main/java/versions.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
