--- a/maven-repair/pom.xml
+++ b/maven-repair/pom.xml
@@ -135,7 +135,7 @@
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.4</version>
+            <version>3.5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -239,33 +239,34 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
-              <groupId>com.github.github</groupId>
-              <artifactId>site-maven-plugin</artifactId>
-              <version>0.12</version>
-              <configuration>
-                <merge>true</merge>
-                <message>Maven artifacts for ${project.artifactId}
-                  ${project.version}</message>
-                <noJekyll>true</noJekyll>
-                <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
-                <branch>refs/heads/master</branch>
-                <includes>
-                  <include>**/*</include>
-                </includes>
-                <repositoryName>maven-repository</repositoryName>
-                <repositoryOwner>tdurieux</repositoryOwner>
-              </configuration>
-              <executions>
-                <execution>
-                  <goals>
-                    <goal>site</goal>
-                  </goals>
-                  <phase>deploy</phase>
-                </execution>
-              </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <skipLocalStaging>true</skipLocalStaging>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    <stagingProfileId>6cb77ea3fc1e79</stagingProfileId>
+                </configuration>
+            </plugin>
+            
         </plugins>
     </build>
 
