added option to stop repairnator after patches have been found for a certain number of builds

--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -46,6 +46,7 @@ BUILD_SLEEP_TIME=10 # Sleep time in seconds for refreshing builds status
 LIMIT_INSPECTED_BUILDS=100 # Maximum number of builds under inspection
 NOTIFY_SUMMARY= # Email adresses separated by comma (used for summary emails, need server specified above)
 SUMMARY_FREQUENCY= # Duration between summaries on the ISO-8601 duration format: PWdTXhYmZs (e.g. PT1h for 1 hour)
+PATCHED_BUILDS_LIMIT=0 # The number of builds that should be patched before the scanner stops
 
 
 #### Checkbranch configuration
